test/Fail/Issue5283.err
Issue5283.agda:12.5-13: error: [SyntaxError]
Syntax error: 'tactic' can only appear in attributes
when scope checking tactic ?
